# web3_rust_backend

./: Cargo.toml
contracts/broadcast/Counter.s.sol/5/: run-1699290775.json  run-1699290782.json  run-latest.json
contracts/script/: Counter.s.sol
src/: counter.rs  lib.rs  main.rs  routes.rs
