[package]
name = "dapp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", default-features = false, features = ["rustls"] }
tokio = { version = "1.33.0", features = ["full"] }
eyre = "0.6.8"
axum = "0.6.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
axum-macros = "0.3.8"
thiserror = "1.0.50"
